@@ -4,3 +4,4 @@ etc/*.conf			/etc/maven2/
 etc/*.xml			/etc/maven2/
 share/cdbs/1/class/*.mk		/usr/share/cdbs/1/class
 share/maven-debian-helper/*.sh	/usr/share/maven-debian-helper
+usr/share/perl5
