@@ -5,6 +5,8 @@ maven-debian-helper (1.5.2) UNRELEASED; urgency=low
   * d/rules: move 'unpatch all POM files' to
     cleanbuilddir target to restore all files to their pristine
     state after building.
+  * share/perl/maven.pm: Apply patch to port share/cdbs/1/class/maven.mk to dh.
+    Patch made by Steve Langasek <vorlon@debian.org>
 
  -- Ludovic Claude <ludovic.claude@laposte.net>  Sun, 06 May 2012 23:54:00 +0200
 
